Use space for form factors (better for dashboard).

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -369,15 +369,22 @@
     "\n",
     "                # Accelerator.\n",
     "                # Tencent: https://github.com/mlperf/submissions_inference_0_5/issues/285\n",
-    "                accelerator = system_json.get('accelerator_model_name', 'N/A')\n",
+    "                accelerator_name = system_json.get('accelerator_model_name', 'N/A')\n",
     "                accelerator_num = int(system_json.get('accelerators_per_node', -1))\n",
+    "                if accelerator_name in [ 'NVIDIA Tesla T4', 'Nvidia Tesla T4', 'Tesla T4' ]:\n",
+    "                    accelerator = 'NVIDIA Tesla T4'\n",
+    "                else:\n",
+    "                    accelerator = accelerator_name\n",
+    "                if accelerator_name == 'Nvidia Tesla V100 SXM3': accelerator = 'NVIDIA Tesla V100 SXM3'\n",
+    "                if accelerator_name == 'tpu-v3.8': accelerator = 'Google TPU v3-8' # NB: 8 TPU v3?\n",
     "\n",
     "                # Software (framework).\n",
     "                software = system_json['framework']\n",
     "\n",
     "                # Default form factors and notes.\n",
-    "                ff_m = ff_d = ff_s = ff_e = ''\n",
-    "                notes = ''\n",
+    "                # NB: Using space rather than empty string turns out better for dashboard.\n",
+    "                ff_m = ff_d = ff_s = ff_e = ' '\n",
+    "                notes = ' '\n",
     "\n",
     "                # Submitter-specific form factors and notes.\n",
     "                submitter_str = submitter\n",
@@ -404,9 +411,7 @@
     "                        notes = 'ECC off'\n",
     "                elif submitter == 'Google':\n",
     "                    ff_s = 'x'\n",
-    "                    # FIXME: What's 8?\n",
-    "                    accelerator_name = 'TPU v3-8'\n",
-    "                    system_name = '{:d}x Cloud {:s}'.format(int(accelerator_num/8), accelerator_name)\n",
+    "                    system_name = '{:d}x Cloud {:s}'.format(int(accelerator_num/8), accelerator)\n",
     "                elif submitter == 'Habana':\n",
     "                    ff_d = ff_s = ff_e = 'x'\n",
     "                    if division == 'open':\n",
