--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -169,6 +169,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accelerator_name_to_accelerator = {\n",
+    "    'NVIDIA Tesla T4': 'NVIDIA Tesla T4',\n",
+    "    'Nvidia Tesla T4': 'NVIDIA Tesla T4',\n",
+    "    'Tesla T4': 'NVIDIA Tesla T4',\n",
+    "    'Nvidia Tesla V100 SXM3': 'NVIDIA Tesla V100 SXM3',\n",
+    "    'tpu-v3.8': 'Google TPU v3-8', # NB: 8 TPU v3?\n",
+    "    'HanGuang 800': 'Alibaba HanGuang 800',\n",
+    "    'Goya': 'Habana Goya',\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,18 +382,13 @@
     "\n",
     "                # Processor (CPU).\n",
     "                processor = system_id_to_processor.get(system_id, system_json.get('host_processor_model_name', 'N/A'))\n",
-    "                processor_num = int(system_json.get('host_processors_per_node', -1))\n",
+    "                processor_num = int(system_json.get('host_processors_per_node', 0))\n",
     "\n",
     "                # Accelerator.\n",
     "                # Tencent: https://github.com/mlperf/submissions_inference_0_5/issues/285\n",
     "                accelerator_name = system_json.get('accelerator_model_name', 'N/A')\n",
-    "                accelerator_num = int(system_json.get('accelerators_per_node', -1))\n",
-    "                if accelerator_name in [ 'NVIDIA Tesla T4', 'Nvidia Tesla T4', 'Tesla T4' ]:\n",
-    "                    accelerator = 'NVIDIA Tesla T4'\n",
-    "                else:\n",
-    "                    accelerator = accelerator_name\n",
-    "                if accelerator_name == 'Nvidia Tesla V100 SXM3': accelerator = 'NVIDIA Tesla V100 SXM3'\n",
-    "                if accelerator_name == 'tpu-v3.8': accelerator = 'Google TPU v3-8' # NB: 8 TPU v3?\n",
+    "                accelerator_num = int(system_json.get('accelerators_per_node', 0))\n",
+    "                accelerator = accelerator_name_to_accelerator.get(accelerator_name, accelerator_name)\n",
     "\n",
     "                # Software (framework).\n",
     "                software = system_json['framework']\n",
