Use Pickle protocol 2 for caching results.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -973,6 +973,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cache_name = 'mlperf-inference-v0.5-results.zip'\n",
+    "cache_compression = 'zip'\n",
+    "cache_protocol = 2 # Supported since Python 2.3\n",
+    "\n",
     "import ck.kernel as ck\n",
     "repo_uoa = 'ck-mlperf'\n",
     "module_uoa = 'module'\n",
@@ -981,10 +985,8 @@
     "if r['return']>0:\n",
     "    print('Error: %s' % r['error'])\n",
     "    exit(1)\n",
-    "cache_path = r['path']\n",
-    "cache_name = 'mlperf-inference-v0.5-results.zip'\n",
-    "cache = os.path.join(cache_path, cache_name)\n",
-    "cache"
+    "cache_path = os.path.join(r['path'], cache_name)\n",
+    "cache_path"
    ]
   },
   {
@@ -994,7 +996,7 @@
    "outputs": [],
    "source": [
     "# Always clean the cache while in the development mode.\n",
-    "!rm -f $cache"
+    "!rm -f $cache_path"
    ]
   },
   {
@@ -1003,7 +1005,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.exists(cache):\n",
+    "if os.path.exists(cache_path):\n",
     "    # Load the table from cache.\n",
     "    print('Loading the results table from cache ...')\n",
     "    df = pd.read_pickle(cache)\n",
@@ -1011,7 +1013,7 @@
     "    # Store the table in a simplified format.\n",
     "    print('Storing the results table to cache ...')\n",
     "    df = get_data(mode='dashboard')\n",
-    "    df.to_pickle(cache)\n",
+    "    df.to_pickle(path=cache_path, protocol=cache_protocol, compression=cache_compression)\n",
     "display_in_full(df)"
    ]
   },
