Update the results notebook to prepare for Python conversion.

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -93,6 +93,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Path to the repository with results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clone the results directory:\n",
+    "# git clone https://github.com/mlperf/inference_results_v0.5 <results_path>\n",
+    "# or\n",
+    "# git clone https://github.com/dividiti/inference_results_v0.5 <results_path>\n",
+    "# results_path = '/home/anton/projects/mlperf/inference_results_v0.5_dividiti'\n",
+    "results_path = '/home/anton/projects/mlperf/inference_results_v0.5_plus'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Path to the cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache_name = 'mlperf-inference-v0.5-results.zip'\n",
+    "cache_compression = 'zip'\n",
+    "cache_protocol = 2 # Supported since Python 2.3\n",
+    "\n",
+    "import ck.kernel as ck\n",
+    "repo_uoa = 'ck-mlperf'\n",
+    "module_uoa = 'module'\n",
+    "data_uoa = 'mlperf.inference'\n",
+    "r = ck.access({'action':'find', 'repo_uoa':repo_uoa, 'module_uoa':module_uoa, 'data_uoa':data_uoa})\n",
+    "if r['return']>0:\n",
+    "    print('Error: %s' % r['error'])\n",
+    "    exit(1)\n",
+    "cache_path = os.path.join(r['path'], cache_name)\n",
+    "cache_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Divisions"
    ]
   },
@@ -336,12 +386,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone the results directory:\n",
-    "# git clone https://github.com/mlperf/inference_results_v0.5 <results_path>\n",
-    "\n",
     "# We use two modes: the 'spreadsheet' mode tries to mimic the official submission table as much as possible;\n",
     "# the 'dashboard' mode uses a more appropriate layout for the CK dashboard.\n",
-    "def get_data(results_path='/home/anton/projects/mlperf/submissions_inference_0_5', mode='spreadsheet'):\n",
+    "def get_data(results_path=results_path, mode='spreadsheet'):\n",
     "    dfs = []\n",
     "    # FOR EACH division.\n",
     "    for division in divisions:\n",
@@ -370,8 +417,10 @@
     "                    category = 'Available'\n",
     "                elif system_json['status'] in [ 'preview', 'Preview' ]:\n",
     "                    category = 'Preview'\n",
-    "                elif system_json['status'] in [ 'rdi', 'RDI' ]:\n",
+    "                elif system_json['status'] in [ 'rdi', 'RDI', 'rdo', 'RDO' ]:\n",
     "                    category = 'Research, Development, Other'\n",
+    "                elif system_json['status'] in [ 'Unofficial', 'unofficial' ]:\n",
+    "                    category = 'Unofficial'\n",
     "                else:\n",
     "                    raise Exception(\"Unsupported category '%s'!\" % (system_json['status']))\n",
     "\n",
@@ -764,8 +813,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_data(mode='spreadsheet')\n",
+    "df = get_data(results_path=results_path, mode='spreadsheet')\n",
     "display_in_full(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dump the table for the CK dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Always clean the cache while in the development mode.\n",
+    "!rm -f $cache_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(cache_path):\n",
+    "    # Load the table from cache.\n",
+    "    print('Loading the results table from cache ...')\n",
+    "    df = pd.read_pickle(cache)\n",
+    "else:\n",
+    "    # Store the table in a simplified format.\n",
+    "    print('Storing the results table to cache ...')\n",
+    "    df = get_data(results_path=results_path, mode='dashboard')\n",
+    "    df.to_pickle(path=cache_path, protocol=cache_protocol, compression=cache_compression)\n",
+    "display_in_full(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dump the table into Excel (with separate sheets for Division / Category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
+    "from pandas import ExcelWriter\n",
+    "# NB: Cannot use dot for 'v0.5', as otherwise the engine complains about an unknown extension.\n",
+    "xlsx_filename = 'MLPerf Inference v0_5 - Results (Automatically Generated).xlsx'\n",
+    "xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
+    "df_ = df.droplevel('ID')\n",
+    "for division in df.index.unique(level='Division'):\n",
+    "    df_d = df_.loc[division]\n",
+    "    for category in df_d.index.unique(level='Category'):\n",
+    "        df_dc = df_d.loc[category]\n",
+    "        if division == 'Open':\n",
+    "            df_xlsx = df_dc\n",
+    "        elif division == 'Closed':\n",
+    "            df_xlsx = df_dc.drop(labels=['Benchmark']+accuracy_columns, axis=1)\n",
+    "        else:\n",
+    "            continue\n",
+    "        # Write different division and category results to separate sheets. Omit index.\n",
+    "        print('*' * 100)\n",
+    "        print('* Division / Category: %s / %s' % (division, category))\n",
+    "        print('*' * 100)\n",
+    "        if category == 'Research, Development, Other': category = 'RDO' # NB: sheet_name must be =< 31 symbols.\n",
+    "        df_xlsx.to_excel(xlsx_writer, sheet_name='{} - {}'.format(division, category), index=False)\n",
+    "        display_in_full(df_xlsx)\n",
+    "        print('')\n",
+    "xlsx_writer.save()\n",
+    "!cp \"$xlsx_filename\" ~/Downloads"
    ]
   },
   {
@@ -791,8 +934,8 @@
     "# Performance columns are strings for formatting reasons. Convert the strings to numbers (with NaNs for empty strings),\n",
     "# then count the numbers across the columns and finally sum.\n",
     "print(\"#Results: %d\" % df[performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
-    "print(\"#Results/Closed: %d\" % df.loc['Closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
-    "print(\"#Results/Open: %d\" % df.loc['Open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())"
+    "#print(\"#Results/Closed: %d\" % df.loc['Closed'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())\n",
+    "#print(\"#Results/Open: %d\" % df.loc['Open'][performance_columns].apply(pd.to_numeric).count(numeric_only=True, axis=0).sum())"
    ]
   },
   {
@@ -808,14 +951,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indices = [ 'Division', 'Submitter' ]\n",
-    "df_num_results_per_division_per_submitter_per_benchmark = df \\\n",
-    "    .reset_index() \\\n",
-    "    [indices + performance_columns] \\\n",
-    "    .set_index(indices) \\\n",
-    "    .apply(pd.to_numeric) \\\n",
-    "    .groupby(level=indices).count()\n",
-    "display_in_full(df_num_results_per_division_per_submitter_per_benchmark)"
+    "# indices = [ 'Division', 'Submitter' ]\n",
+    "# df_num_results_per_division_per_submitter_per_benchmark = df \\\n",
+    "#     .reset_index() \\\n",
+    "#     [indices + performance_columns] \\\n",
+    "#     .set_index(indices) \\\n",
+    "#     .apply(pd.to_numeric) \\\n",
+    "#     .groupby(level=indices).count()\n",
+    "# display_in_full(df_num_results_per_division_per_submitter_per_benchmark)"
    ]
   },
   {
@@ -824,8 +967,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_num_results_per_division_per_submitter = df_num_results_per_division_per_submitter_per_benchmark.sum(axis=1)\n",
-    "df_num_results_per_division_per_submitter"
+    "# df_num_results_per_division_per_submitter = df_num_results_per_division_per_submitter_per_benchmark.sum(axis=1)\n",
+    "# df_num_results_per_division_per_submitter"
    ]
   },
   {
@@ -841,43 +984,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_num_results(df_num_results_per_submitter, autopct='%1.0f%%', pctdistance=0.8, labeldistance=1.1, topN=5,\n",
-    "                     explode_submitters=['dividiti'], explode_distance=0.05, startangle=0, shadow=False,\n",
-    "                     title='MLPerf Inference v0.5 - Results per Submitter', fname=None, ftype='jpg', color = 'darkgray'):\n",
+    "# def plot_num_results(df_num_results_per_submitter, autopct='%1.0f%%', pctdistance=0.8, labeldistance=1.1, topN=5,\n",
+    "#                      explode_submitters=['dividiti'], explode_distance=0.05, startangle=0, shadow=False,\n",
+    "#                      title='MLPerf Inference v0.5 - Results per Submitter', fname=None, ftype='jpg', color = 'darkgray'):\n",
     "\n",
-    "    df_num_results_per_submitter_descending = pd.DataFrame({\n",
-    "        'Submitter' : df_num_results_per_submitter.index,\n",
-    "        '#Results'  : df_num_results_per_submitter.values}) \\\n",
-    "        .sort_values('#Results', ascending=False)\n",
+    "#     df_num_results_per_submitter_descending = pd.DataFrame({\n",
+    "#         'Submitter' : df_num_results_per_submitter.index,\n",
+    "#         '#Results'  : df_num_results_per_submitter.values}) \\\n",
+    "#         .sort_values('#Results', ascending=False)\n",
     "\n",
-    "    df_num_results_per_submitter_topN = df_num_results_per_submitter_descending[:topN].copy()\n",
+    "#     df_num_results_per_submitter_topN = df_num_results_per_submitter_descending[:topN].copy()\n",
     "\n",
-    "    df_num_results_per_submitter_others = pd.DataFrame(data = {\n",
-    "        'Submitter' : ['Others'],\n",
-    "        '#Results'  : [df_num_results_per_submitter_descending['#Results'][topN:].sum()]})\n",
+    "#     df_num_results_per_submitter_others = pd.DataFrame(data = {\n",
+    "#         'Submitter' : ['Others'],\n",
+    "#         '#Results'  : [df_num_results_per_submitter_descending['#Results'][topN:].sum()]})\n",
     "\n",
-    "    df_num_results_per_submitter_topN_and_others = \\\n",
-    "        pd.concat([df_num_results_per_submitter_topN, df_num_results_per_submitter_others]) \\\n",
-    "        .set_index('Submitter') \\\n",
-    "        .sort_values('Submitter', ascending=False)\n",
+    "#     df_num_results_per_submitter_topN_and_others = \\\n",
+    "#         pd.concat([df_num_results_per_submitter_topN, df_num_results_per_submitter_others]) \\\n",
+    "#         .set_index('Submitter') \\\n",
+    "#         .sort_values('Submitter', ascending=False)\n",
     "\n",
-    "    results = df_num_results_per_submitter_topN_and_others['#Results']\n",
-    "    submitters = df_num_results_per_submitter_topN_and_others.index\n",
-    "    explode = [ explode_distance if submitter in explode_submitters else 0 for submitter in submitters ]\n",
+    "#     results = df_num_results_per_submitter_topN_and_others['#Results']\n",
+    "#     submitters = df_num_results_per_submitter_topN_and_others.index\n",
+    "#     explode = [ explode_distance if submitter in explode_submitters else 0 for submitter in submitters ]\n",
     "\n",
-    "    mp.rcParams['figure.dpi'] = default_dpi\n",
-    "    plt.pie(results, labels=submitters, autopct=autopct,\n",
-    "            pctdistance=pctdistance, labeldistance=labeldistance,\n",
-    "            explode=explode, startangle=35, shadow=shadow)\n",
+    "#     mp.rcParams['figure.dpi'] = default_dpi\n",
+    "#     plt.pie(results, labels=submitters, autopct=autopct,\n",
+    "#             pctdistance=pctdistance, labeldistance=labeldistance,\n",
+    "#             explode=explode, startangle=35, shadow=shadow)\n",
     "    \n",
-    "    plt.title(title)\n",
-    "    plt.tight_layout()\n",
-    "    if fname is not None:\n",
-    "        # A lazy way to use the default file name.\n",
-    "        if fname == '': fname = '{}.{}'.format(title, ftype)    \n",
-    "        plt.savefig(fname=fname, format=ftype, dpi=100, quality=90, optimize=True, bbox_inches='tight',\n",
-    "                    facecolor=color, edgecolor=color)\n",
-    "    plt.show()"
+    "#     plt.title(title)\n",
+    "#     plt.tight_layout()\n",
+    "#     if fname is not None:\n",
+    "#         # A lazy way to use the default file name.\n",
+    "#         if fname == '': fname = '{}.{}'.format(title, ftype)    \n",
+    "#         plt.savefig(fname=fname, format=ftype, dpi=100, quality=90, optimize=True, bbox_inches='tight',\n",
+    "#                     facecolor=color, edgecolor=color)\n",
+    "#     plt.show()"
    ]
   },
   {
@@ -893,13 +1036,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for division, topN in zip([ 'Closed', 'Open' ], [ 10, 3 ]):\n",
-    "    explode_submitters = [] if division == 'Open' else ['dividiti']\n",
-    "    plot_num_results(\n",
-    "        df_num_results_per_division_per_submitter.loc[division],\n",
-    "        title='MLPerf Inference v0.5 - {} Division - Results per Submitter'.format(division),\n",
-    "        topN=topN, explode_submitters=explode_submitters\n",
-    "    )"
+    "# for division, topN in zip([ 'Closed', 'Open' ], [ 10, 3 ]):\n",
+    "#     explode_submitters = [] if division == 'Open' else ['dividiti']\n",
+    "#     plot_num_results(\n",
+    "#         df_num_results_per_division_per_submitter.loc[division],\n",
+    "#         title='MLPerf Inference v0.5 - {} Division - Results per Submitter'.format(division),\n",
+    "#         topN=topN, explode_submitters=explode_submitters\n",
+    "#     )"
    ]
   },
   {
@@ -915,106 +1058,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_num_results(\n",
-    "    df_num_results_per_division_per_submitter.droplevel('Division').groupby(level='Submitter').sum(),\n",
-    "    topN=8, explode_submitters=['dividiti', 'dividiti + PoliMi'], fname='')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dump the table into Excel (with separate sheets for Division / Category)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a Pandas Excel writer using XlsxWriter as the engine.\n",
-    "from pandas import ExcelWriter\n",
-    "# NB: Cannot use dot for 'v0.5', as otherwise the engine complains about an unknown extension.\n",
-    "xlsx_filename = 'MLPerf Inference v0_5 - Results (Automatically Generated).xlsx'\n",
-    "xlsx_writer = ExcelWriter(xlsx_filename, engine='xlsxwriter', options={'strings_to_urls': True})\n",
-    "for division in df.index.unique(level='Division'):\n",
-    "    df_d = df.loc[division]\n",
-    "    for category in df_d.index.unique(level='Category'):\n",
-    "        df_dc = df_d.loc[category]\n",
-    "        if division == 'Open':\n",
-    "            df_xlsx = df_dc\n",
-    "        elif division == 'Closed':\n",
-    "            df_xlsx = df_dc.drop(labels=['Benchmark']+accuracy_columns, axis=1)\n",
-    "        else:\n",
-    "            continue\n",
-    "        # Write different division and category results to separate sheets. Omit index.\n",
-    "        print('*' * 100)\n",
-    "        print('* Division / Category: %s / %s' % (division, category))\n",
-    "        print('*' * 100)\n",
-    "        if category == 'Research, Development, Other': category = 'RDO' # NB: sheet_name must be =< 31 symbols.\n",
-    "        df_xlsx.to_excel(xlsx_writer, sheet_name='{} - {}'.format(division, category), index=False)\n",
-    "        display_in_full(df_xlsx)\n",
-    "        print('')\n",
-    "xlsx_writer.save()\n",
-    "!cp \"$xlsx_filename\" ~/Downloads"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dump the table for the CK dashboard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cache_name = 'mlperf-inference-v0.5-results.zip'\n",
-    "cache_compression = 'zip'\n",
-    "cache_protocol = 2 # Supported since Python 2.3\n",
-    "\n",
-    "import ck.kernel as ck\n",
-    "repo_uoa = 'ck-mlperf'\n",
-    "module_uoa = 'module'\n",
-    "data_uoa = 'mlperf.inference'\n",
-    "r = ck.access({'action':'find', 'repo_uoa':repo_uoa, 'module_uoa':module_uoa, 'data_uoa':data_uoa})\n",
-    "if r['return']>0:\n",
-    "    print('Error: %s' % r['error'])\n",
-    "    exit(1)\n",
-    "cache_path = os.path.join(r['path'], cache_name)\n",
-    "cache_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Always clean the cache while in the development mode.\n",
-    "!rm -f $cache_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.exists(cache_path):\n",
-    "    # Load the table from cache.\n",
-    "    print('Loading the results table from cache ...')\n",
-    "    df = pd.read_pickle(cache)\n",
-    "else:\n",
-    "    # Store the table in a simplified format.\n",
-    "    print('Storing the results table to cache ...')\n",
-    "    df = get_data(mode='dashboard')\n",
-    "    df.to_pickle(path=cache_path, protocol=cache_protocol, compression=cache_compression)\n",
-    "display_in_full(df)"
+    "# plot_num_results(\n",
+    "#     df_num_results_per_division_per_submitter.droplevel('Division').groupby(level='Submitter').sum(),\n",
+    "#     topN=8, explode_submitters=['dividiti', 'dividiti + PoliMi'], fname='')"
    ]
   },
   {
@@ -1054,7 +1100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
