Update v0.5 results notebook (white background).

--- a/jnotebook/mlperf-inference-v0.5/results.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/results.ipynb
@@ -106,8 +106,8 @@
     "# git clone https://github.com/mlperf/inference_results_v0.5 <results_path>\n",
     "# or\n",
     "# git clone https://github.com/dividiti/inference_results_v0.5 <results_path>\n",
-    "# results_path = '/home/anton/projects/mlperf/inference_results_v0.5_dividiti'\n",
-    "results_path = '/home/anton/projects/mlperf/inference_results_v0.5_plus'"
+    "results_path = '/home/anton/projects/mlperf/inference_results_v0.5_dividiti'\n",
+    "#results_path = '/home/anton/projects/mlperf/inference_results_v0.5_plus'"
    ]
   },
   {
@@ -951,13 +951,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# indices = [ 'Division', 'Submitter' ]\n",
-    "# df_num_results_per_division_per_submitter_per_benchmark = df \\\n",
-    "#     .reset_index() \\\n",
-    "#     [indices + performance_columns] \\\n",
-    "#     .set_index(indices) \\\n",
-    "#     .apply(pd.to_numeric) \\\n",
-    "#     .groupby(level=indices).count()\n",
+    "indices = [ 'Division', 'Submitter' ]\n",
+    "df_num_results_per_division_per_submitter_per_benchmark = df \\\n",
+    "    .reset_index(drop=True) \\\n",
+    "    [indices + performance_columns] \\\n",
+    "    .set_index(indices) \\\n",
+    "    .apply(pd.to_numeric) \\\n",
+    "    .groupby(level=indices).count()\n",
     "# display_in_full(df_num_results_per_division_per_submitter_per_benchmark)"
    ]
   },
@@ -967,8 +967,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_num_results_per_division_per_submitter = df_num_results_per_division_per_submitter_per_benchmark.sum(axis=1)\n",
-    "# df_num_results_per_division_per_submitter"
+    "df_num_results_per_division_per_submitter = df_num_results_per_division_per_submitter_per_benchmark.sum(axis=1)\n",
+    "df_num_results_per_division_per_submitter"
    ]
   },
   {
@@ -984,43 +984,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def plot_num_results(df_num_results_per_submitter, autopct='%1.0f%%', pctdistance=0.8, labeldistance=1.1, topN=5,\n",
-    "#                      explode_submitters=['dividiti'], explode_distance=0.05, startangle=0, shadow=False,\n",
-    "#                      title='MLPerf Inference v0.5 - Results per Submitter', fname=None, ftype='jpg', color = 'darkgray'):\n",
+    "def plot_num_results(df_num_results_per_submitter, autopct='%1.0f%%', pctdistance=0.8, labeldistance=1.1, topN=5,\n",
+    "                     explode_submitters=['dividiti'], explode_distance=0.05, startangle=0, shadow=False,\n",
+    "                     title='MLPerf Inference v0.5 - Results per Submitter', fname=None, ftype='jpg', color='darkgray'):\n",
     "\n",
-    "#     df_num_results_per_submitter_descending = pd.DataFrame({\n",
-    "#         'Submitter' : df_num_results_per_submitter.index,\n",
-    "#         '#Results'  : df_num_results_per_submitter.values}) \\\n",
-    "#         .sort_values('#Results', ascending=False)\n",
+    "    df_num_results_per_submitter_descending = pd.DataFrame({\n",
+    "        'Submitter' : df_num_results_per_submitter.index,\n",
+    "        '#Results'  : df_num_results_per_submitter.values}) \\\n",
+    "        .sort_values('#Results', ascending=False)\n",
     "\n",
-    "#     df_num_results_per_submitter_topN = df_num_results_per_submitter_descending[:topN].copy()\n",
+    "    df_num_results_per_submitter_topN = df_num_results_per_submitter_descending[:topN].copy()\n",
     "\n",
-    "#     df_num_results_per_submitter_others = pd.DataFrame(data = {\n",
-    "#         'Submitter' : ['Others'],\n",
-    "#         '#Results'  : [df_num_results_per_submitter_descending['#Results'][topN:].sum()]})\n",
+    "    df_num_results_per_submitter_others = pd.DataFrame(data = {\n",
+    "        'Submitter' : ['Others'],\n",
+    "        '#Results'  : [df_num_results_per_submitter_descending['#Results'][topN:].sum()]})\n",
     "\n",
-    "#     df_num_results_per_submitter_topN_and_others = \\\n",
-    "#         pd.concat([df_num_results_per_submitter_topN, df_num_results_per_submitter_others]) \\\n",
-    "#         .set_index('Submitter') \\\n",
-    "#         .sort_values('Submitter', ascending=False)\n",
+    "    df_num_results_per_submitter_topN_and_others = \\\n",
+    "        pd.concat([df_num_results_per_submitter_topN, df_num_results_per_submitter_others]) \\\n",
+    "        .set_index('Submitter') \\\n",
+    "        .sort_values('Submitter', ascending=False)\n",
     "\n",
-    "#     results = df_num_results_per_submitter_topN_and_others['#Results']\n",
-    "#     submitters = df_num_results_per_submitter_topN_and_others.index\n",
-    "#     explode = [ explode_distance if submitter in explode_submitters else 0 for submitter in submitters ]\n",
+    "    results = df_num_results_per_submitter_topN_and_others['#Results']\n",
+    "    submitters = df_num_results_per_submitter_topN_and_others.index\n",
+    "    explode = [ explode_distance if submitter in explode_submitters else 0 for submitter in submitters ]\n",
     "\n",
-    "#     mp.rcParams['figure.dpi'] = default_dpi\n",
-    "#     plt.pie(results, labels=submitters, autopct=autopct,\n",
-    "#             pctdistance=pctdistance, labeldistance=labeldistance,\n",
-    "#             explode=explode, startangle=35, shadow=shadow)\n",
+    "    mp.rcParams['figure.dpi'] = default_dpi\n",
+    "    plt.pie(results, labels=submitters, autopct=autopct,\n",
+    "            pctdistance=pctdistance, labeldistance=labeldistance,\n",
+    "            explode=explode, startangle=35, shadow=shadow)\n",
     "    \n",
-    "#     plt.title(title)\n",
-    "#     plt.tight_layout()\n",
-    "#     if fname is not None:\n",
-    "#         # A lazy way to use the default file name.\n",
-    "#         if fname == '': fname = '{}.{}'.format(title, ftype)    \n",
-    "#         plt.savefig(fname=fname, format=ftype, dpi=100, quality=90, optimize=True, bbox_inches='tight',\n",
-    "#                     facecolor=color, edgecolor=color)\n",
-    "#     plt.show()"
+    "    plt.title(title)\n",
+    "    plt.tight_layout()\n",
+    "    if fname is not None:\n",
+    "        # A lazy way to use the default file name.\n",
+    "        if fname == '': fname = '{}.{}'.format(title, ftype)    \n",
+    "        plt.savefig(fname=fname, format=ftype, dpi=200, quality=95, optimize=True, bbox_inches='tight',\n",
+    "                    facecolor=color, edgecolor=color, transparent=True)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -1058,9 +1058,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot_num_results(\n",
-    "#     df_num_results_per_division_per_submitter.droplevel('Division').groupby(level='Submitter').sum(),\n",
-    "#     topN=8, explode_submitters=['dividiti', 'dividiti + PoliMi'], fname='')"
+    "plot_num_results(\n",
+    "    df_num_results_per_division_per_submitter.droplevel('Division').groupby(level='Submitter').sum(),\n",
+    "    topN=8, explode_submitters=['dividiti', 'dividiti + PoliMi'], color='white', fname='')"
    ]
   },
   {
