--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+20210403:
+  * [gfursin] fixed TFLite packages 1.15 (eigen library).
+     https://github.com/ctuning/ck/issues/138
+     https://github.com/ctuning/ck/issues/139
+
 * 2020.09.04 - [Fursin] moved module:mlbox to ctuning/ck-mlbox repo
 
 * 2020.09.03 - [Fursin] added module:mlbox to abstract MLBox
